--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,34 @@
     max-width: 1200px;
     padding: 0 10px;
     margin: 0 auto;
+    padding-top: 10px;
+}
+
+.banner {
+    background-color: #ffc600;
+    width: 100%;
+    height: 94px;
+    .container {
+        display: flex;
+        max-width: 1200px;
+        padding: 0 10px;
+        height: 100%;
+        align-items: center;
+        .logo {
+            height: 100%;
+            img {
+                height: 100%;
+            }
+        }
+        h5 {
+            color: black;
+            font-weight: 700;
+            margin-top: 10px;
+        }
+        h6 {
+            color: black;
+
+            font-weight: 700;
+        }
+    }
 }
