--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
     border: none;
     font-size: 1.6rem;
     background-color: white;
+    text-align: center;
 }
 .primary {
     background-color: var(--primary);
