--- a/src/States/Practice5/Practice5.module.scss
+++ b/src/States/Practice5/Practice5.module.scss
@@ -1,38 +1,22 @@
+@import '../../scss/';
 .container {
-    .inner {
-        .photo {
-            overflow: hidden;
-            height: 500px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            .control {
-                font-size: 5rem;
-            }
-            img {
-                width: 70%;
-                transition: all 3s ease;
-                object-fit: cover;
-                &:hover {
-                    opacity: 1;
-                }
-            }
-        }
-
-        .thumbnail {
-            margin-top: 20px;
-            height: 100px;
-            display: flex;
-            justify-content: center;
-            img {
-                height: 100%;
-            }
-        }
-        .nav {
-            margin: 10px 0 20px 0;
-        }
-        .content {
-            height: 100px;
+    background-color: white;
+}
+.inner {
+    @include tablet {
+        display: flex;
+        // flex-direction: column;
+    }
+}
+.nav {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+    @include tablet {
+        flex-wrap: wrap;
+        margin-right: 20px;
+        button {
+            margin-bottom: 6px;
         }
     }
 }
