--- a/src/States/States.module.scss
+++ b/src/States/States.module.scss
@@ -1,5 +1,12 @@
+@import '../scss/';
 .wrapper {
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 100px;
+    padding: 100px 30px 0 30px;
+    @include tablet {
+    }
+    @include mobile {
+        padding: 100px 16px 0 16px;
+    }
 }
