--- a/src/States/Practice3/Practice3.module.scss
+++ b/src/States/Practice3/Practice3.module.scss
@@ -5,12 +5,13 @@
         .photo {
             overflow: hidden;
             max-width: 1200px;
-            height: 80%;
+            height: 70%;
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
             margin: 20px auto;
+            margin-top: 100px;
             .control-prev {
                 font-size: 5rem;
                 position: absolute;
@@ -23,7 +24,7 @@
                 align-items: center;
                 justify-content: center;
                 &:hover {
-                    background-color: rgba($color: #000000, $alpha: 0.04);
+                    background-color: rgba($color: #000000, $alpha: 0.05);
                     cursor: pointer;
                 }
             }
@@ -65,6 +66,7 @@
                     display: flex;
                     width: 50px;
                     height: 50px;
+                    display: flex;
                     align-items: center;
                     justify-content: center;
                     color: var(--primary);
@@ -81,6 +83,7 @@
             }
         }
         .thumbnail {
+            overflow-x: scroll;
             height: 10%;
             display: flex;
             justify-content: center;
@@ -91,22 +94,21 @@
         }
     }
 }
-
 .photo-list {
     margin: 20px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     img {
-        width: 25%;
+        width: 20%;
         @include tablet {
-            width: 50%;
+            width: 25%;
         }
     }
 }
 
 .limit-left,
 .limit-right {
-    opacity: 0.5;
+    opacity: 0.2;
     cursor: no-drop !important;
 }
