--- a/src/States/Practice4/Practice4.module.scss
+++ b/src/States/Practice4/Practice4.module.scss
@@ -10,13 +10,18 @@
 }
 .nav {
     display: flex;
+    margin: 16px 0;
     justify-content: center;
-    margin: 10px 0;
+    // background-color: red;
     @include tablet {
+        flex-direction: column;
+        justify-content: flex-start;
+
         flex-wrap: wrap;
-        margin-right: 20px;
+        margin: 0 20px 0 0;
         button {
             margin-bottom: 6px;
+            width: 150px !important;
         }
     }
 }
