--- a/src/States/Practice5/Practice5.module.scss
+++ b/src/States/Practice5/Practice5.module.scss
@@ -11,12 +11,13 @@
 .nav {
     display: flex;
     justify-content: center;
-    margin: 10px 0;
+    margin: 20px 0;
     @include tablet {
         flex-wrap: wrap;
-        margin-right: 20px;
+        margin: 0 20px 0 0;
         button {
             margin-bottom: 6px;
+            width: 150px !important;
         }
     }
 }
