--- a/src/States/States.module.scss
+++ b/src/States/States.module.scss
@@ -4,9 +4,11 @@
     margin: 0 auto;
     padding-top: 100px;
     padding: 100px 30px 0 30px;
-    @include tablet {
-    }
+
     @include mobile {
         padding: 100px 16px 0 16px;
     }
+}
+.title {
+    margin: 16px 0;
 }
