--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,6 +4,9 @@
     font-size: 1.6rem;
     background-color: white;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .primary {
     background-color: var(--primary);
@@ -19,16 +22,20 @@
 }
 
 .sm {
-    padding: 10px 20px;
+    width: 20px;
+    height: 30px;
 }
 .md {
-    padding: 10px 40px;
+    width: 30px;
+    height: 40px;
 }
 .xl {
-    padding: 10px 80px;
+    width: 40px;
+    height: 50px;
 }
 .xxl {
-    padding: 10px 100px;
+    width: 50px;
+    height: 60px;
 }
 
 .hoverGrey {
