--- a/src/States/Practice3/Practice3.module.scss
+++ b/src/States/Practice3/Practice3.module.scss
@@ -12,6 +12,9 @@
             position: relative;
             margin: 20px auto;
             margin-top: 100px;
+            @include mobile {
+                height: 50%;
+            }
             .control-prev {
                 font-size: 5rem;
                 position: absolute;
@@ -52,6 +55,9 @@
                 transition: all 0.5s ease;
                 width: 80%;
                 overflow: hidden;
+                @include mobile {
+                    width: 100%;
+                }
                 img {
                     object-fit: cover;
                     width: 100%;
