--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,11 +11,16 @@
         z-index: 9999999;
     }
 }
-
 .container {
-    height: 85px;
     margin: 0 auto;
     max-width: 1200px;
+}
+.header {
+    background-color: #0c0626;
+
+    position: relative;
+    z-index: 999;
+    height: 85px;
     color: white;
     display: flex;
     align-items: center;
@@ -23,6 +28,7 @@
         padding: 0 16px;
     }
     @include mobile {
+        height: 70px;
         justify-content: space-between;
     }
     .logo {
@@ -31,6 +37,9 @@
         img {
             width: 70px;
             margin-right: 10px;
+            @include mobile {
+                width: 60px;
+            }
         }
         h1 {
             margin-right: 30px;
@@ -44,11 +53,9 @@
     }
 }
 
-.navbar {
+.navbar-pc {
     display: flex;
-    align-items: center;
     margin-bottom: 0;
-
     li + li {
         margin-left: 20px;
     }
@@ -62,7 +69,29 @@
     }
 }
 
-.navbar.show {
+.navbar-mobile {
+    color: white;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -100%;
+    transform: translateY(70px);
+    display: flex;
+    align-items: center;
+    transition: all 0.5s ease;
+
+    li + li {
+        margin-left: 20px;
+    }
+    .active {
+        color: var(--primary);
+    }
+    flex: 1;
+}
+
+.navbar-mobile.topDown {
+    top: 0;
+    transform: translateY(0);
     @include tablet {
         display: flex;
         flex-direction: column;
