--- a/src/States/Practice3/Practice3.module.scss
+++ b/src/States/Practice3/Practice3.module.scss
@@ -26,6 +26,10 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                @include mobile {
+                    width: 40px;
+                    height: 40px;
+                }
                 &:hover {
                     background-color: rgba($color: #000000, $alpha: 0.05);
                     cursor: pointer;
@@ -42,6 +46,10 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                @include mobile {
+                    width: 40px;
+                    height: 40px;
+                }
                 &:hover {
                     background-color: rgba($color: #000000, $alpha: 0.05);
 
@@ -80,6 +88,10 @@
                         background-color: rgba($color: #000000, $alpha: 0.05);
 
                         cursor: pointer;
+                    }
+                    @include mobile {
+                        width: 35px;
+                        height: 35px;
                     }
                 }
             }
