--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -68,14 +68,20 @@
         display: none;
     }
 }
-
+.navbar-mobile-container {
+    background-color: red;
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 100vh;
+}
 .navbar-mobile {
     color: white;
     position: absolute;
     left: 0;
     right: 0;
-    top: -100%;
-    transform: translateY(70px);
+    top: 0;
+    // transform: translateY(70px);
     display: flex;
     align-items: center;
     transition: all 0.5s ease;
@@ -87,11 +93,6 @@
         color: var(--primary);
     }
     flex: 1;
-}
-
-.navbar-mobile.topDown {
-    top: 0;
-    transform: translateY(0);
     @include tablet {
         display: flex;
         flex-direction: column;
@@ -99,9 +100,11 @@
         padding-left: 0;
 
         li {
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             margin: 0;
-            padding: 20px;
+            height: 70px;
             background-color: #0c0626;
             width: 100%;
         }
