--- a/src/LifeCycle/Practice1/Practice1.module.scss
+++ b/src/LifeCycle/Practice1/Practice1.module.scss
@@ -1,6 +1,8 @@
 .container {
     display: flex;
     justify-content: center;
+    width: 100%;
+
     .music-list {
         border-radius: 10px;
         overflow: hidden;
@@ -10,8 +12,10 @@
         margin-right: 30px;
     }
     .music-control {
+        width: 30%;
         display: flex;
         flex-direction: column;
+        align-items: center;
         justify-content: center;
     }
 }
