--- a/src/LifeCycle/Practice1/components/Media/Media.module.scss
+++ b/src/LifeCycle/Practice1/components/Media/Media.module.scss
@@ -53,6 +53,12 @@
                     cursor: pointer;
                 }
             }
+            i {
+                width: 25px;
+                height: 25px;
+                background-image: url(https://zmp3-static.zmdcdn.me/skins/zmp3-v6.1/images/icons/icon-playing.gif);
+                background-size: cover;
+            }
         }
     }
     .content {
