--- a/src/LifeCycle/Practice1/components/MediaControl/MediaControl.module.scss
+++ b/src/LifeCycle/Practice1/components/MediaControl/MediaControl.module.scss
@@ -3,6 +3,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: 2px 2px 5px 2px rgba($color: #000000, $alpha: 0.07);
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #d3d3d3;
     .cd {
         display: flex;
         justify-content: center;
@@ -18,7 +22,8 @@
 
         .circle {
             position: absolute;
-            background-color: #170f23;
+            background-color: #005cc8;
+            box-shadow: 0px 0px 50px 10px rgba($color: #000000, $alpha: 0.4);
             width: 50px;
             height: 50px;
             left: 50%;
