--- a/src/LifeCycle/Practice1/components/CustomMediaPlayer/CustomMediaPlayer.module.scss
+++ b/src/LifeCycle/Practice1/components/CustomMediaPlayer/CustomMediaPlayer.module.scss
@@ -1,8 +1,10 @@
+@import '../../../../scss/';
+
 .player-container {
     display: flex;
     flex-direction: column;
     button {
-        background-color: #d3d3d3;
+        background-color: #f0f0f0;
     }
     .main {
         display: flex;
@@ -40,14 +42,35 @@
         .volume {
             position: relative;
             input {
-                // position: absolute;
-                // // transform: rotate(-90deg);
-                // bottom: 0;
+                position: absolute;
+                transform: rotate(-90deg) translateX(50%);
+                bottom: 20px;
+                right: -30px;
+                width: 80px;
                 display: none;
             }
             .mute {
                 font-size: 2rem;
                 color: #005cc8;
+                position: relative;
+            }
+            .mute::after {
+                content: '';
+                width: 100%;
+                height: 120px;
+                // background-color: red;
+                position: absolute;
+                left: 0;
+                bottom: 0;
+            }
+            .mute:hover ~ input {
+                display: block;
+            }
+
+            @include tablet {
+                .mute:hover ~ input {
+                    display: none;
+                }
             }
         }
     }
