--- a/src/LifeCycle/Practice1/components/MediaControl/MediaControl.module.scss
+++ b/src/LifeCycle/Practice1/components/MediaControl/MediaControl.module.scss
@@ -1,12 +1,13 @@
 .container {
+    height: 100%;
+    flex: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 2px 2px 5px 2px rgba($color: #000000, $alpha: 0.07);
     padding: 20px;
-    border-radius: 20px;
-    background-color: #d3d3d3;
+    border-radius: 15px;
+    background-color: #f0f0f0;
     .cd {
         display: flex;
         justify-content: center;
