--- a/src/LifeCycle/Practice1/components/CustomMediaPlayer/CustomMediaPlayer.module.scss
+++ b/src/LifeCycle/Practice1/components/CustomMediaPlayer/CustomMediaPlayer.module.scss
@@ -5,23 +5,33 @@
     flex-direction: column;
     button {
         background-color: #f0f0f0;
+        color: #686868;
     }
     .main {
         display: flex;
         justify-content: center;
         font-size: 6rem;
-        .play {
-            color: #005cc8;
-        }
+
         .prev {
             margin-right: 30px;
             font-size: 4rem;
-            color: #005cc8;
         }
         .next {
             margin-left: 30px;
             font-size: 4rem;
-            color: #005cc8;
+        }
+
+        .random {
+            margin-right: 30px;
+            font-size: 2rem;
+        }
+
+        .repeat {
+            margin-left: 30px;
+            font-size: 2rem;
+        }
+        .active {
+            color: #20bbe2;
         }
     }
     .more {
@@ -51,7 +61,7 @@
             }
             .mute {
                 font-size: 2rem;
-                color: #005cc8;
+
                 position: relative;
             }
             .mute::after {
@@ -73,5 +83,100 @@
                 }
             }
         }
+    }
+    input {
+        background-color: #f0f0f0;
+    }
+    input[type='range'] {
+        -webkit-appearance: none;
+        margin: 10px 0;
+        width: 100%;
+    }
+    input[type='range']:focus {
+        outline: none;
+    }
+    input[type='range']::-webkit-slider-runnable-track {
+        width: 100%;
+        height: 12.8px;
+        cursor: pointer;
+        animate: 0.2s;
+        box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+        background: #cdcdcd;
+        border-radius: 25px;
+        border: 0px solid #000101;
+    }
+    input[type='range']::-webkit-slider-thumb {
+        box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+        border: 0px solid #000000;
+        height: 20px;
+        width: 39px;
+        border-radius: 7px;
+        background: #61dbfb;
+        cursor: pointer;
+        -webkit-appearance: none;
+        margin-top: -3.6px;
+    }
+    input[type='range']:focus::-webkit-slider-runnable-track {
+        background: #cdcdcd;
+    }
+    input[type='range']::-moz-range-track {
+        width: 100%;
+        height: 12.8px;
+        cursor: pointer;
+        animate: 0.2s;
+        box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+        background: #ac51b5;
+        border-radius: 25px;
+        border: 0px solid #000101;
+    }
+    input[type='range']::-moz-range-thumb {
+        box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+        border: 0px solid #000000;
+        height: 20px;
+        width: 39px;
+        border-radius: 7px;
+        background: #65001c;
+        cursor: pointer;
+    }
+    input[type='range']::-ms-track {
+        width: 100%;
+        height: 12.8px;
+        cursor: pointer;
+        animate: 0.2s;
+        background: transparent;
+        border-color: transparent;
+        border-width: 39px 0;
+        color: transparent;
+    }
+    input[type='range']::-ms-fill-lower {
+        background: #ac51b5;
+        border: 0px solid #000101;
+        border-radius: 50px;
+        box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    }
+    input[type='range']::-ms-fill-upper {
+        background: #ac51b5;
+        border: 0px solid #000101;
+        border-radius: 50px;
+        box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    }
+    input[type='range']::-ms-thumb {
+        box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+        border: 0px solid #000000;
+        height: 20px;
+        width: 39px;
+        border-radius: 7px;
+        background: #65001c;
+        cursor: pointer;
+    }
+    input[type='range']:focus::-ms-fill-lower {
+        background: #ac51b5;
+    }
+    input[type='range']:focus::-ms-fill-upper {
+        background: #ac51b5;
+    }
+
+    body {
+        padding: 30px;
     }
 }
