--- a/src/LifeCycle/Practice1/components/MediaControl/MediaControl.module.scss
+++ b/src/LifeCycle/Practice1/components/MediaControl/MediaControl.module.scss
@@ -23,7 +23,7 @@
 
         .circle {
             position: absolute;
-            background-color: #005cc8;
+            background-color: #f0f0f0;
             box-shadow: 0px 0px 50px 10px rgba($color: #000000, $alpha: 0.4);
             width: 50px;
             height: 50px;
