--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,1 +1,7 @@
 @import './breakpoint';
+$primary: #61dbfb;
+$bg-zing: #170f23;
+$white: #ffff;
+$grey: #443d4d;
+$white-light: #e5e5e5;
+$text-light: #817d88;
