--- a/src/LifeCycle/Practice1/Practice1.module.scss
+++ b/src/LifeCycle/Practice1/Practice1.module.scss
@@ -1,5 +1,5 @@
 @import '../../scss/';
-.container {
+.player-container {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -8,7 +8,7 @@
         flex-direction: column-reverse;
     }
 
-    .music-list {
+    .list {
         border-radius: 15px;
         box-shadow: 2px 2px 2px 2px rgba($color: #000000, $alpha: 0.1);
         overflow: hidden;
@@ -21,7 +21,7 @@
             margin-bottom: 20px;
         }
     }
-    .music-control {
+    .tab-control {
         border-radius: 15px;
         box-shadow: 2px 2px 2px 2px rgba($color: #000000, $alpha: 0.1);
         height: 480px;
