--- a/src/LifeCycle/Practice1/components/Disc/Disc.module.scss
+++ b/src/LifeCycle/Practice1/components/Disc/Disc.module.scss
@@ -1,38 +1,33 @@
 @import '../../../../scss/';
 
-.container {
+.disc-container {
     height: 100%;
     flex: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 20px;
     border-radius: 15px;
     background-color: $bg-zing;
-    .cd {
+    .disc {
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 999px;
         overflow: hidden;
-        position: relative;
         margin-bottom: 20px;
-
-        img {
-            border-radius: 999px;
-        }
+        width: 250px;
+        height: 250px;
+        background-repeat: no-repeat;
+        background-size: cover;
 
         .circle {
-            position: absolute;
             background-color: $white-light;
             box-shadow: 0px 0px 50px 10px rgba($color: #000000, $alpha: 0.4);
             width: 50px;
             height: 50px;
-            left: 50%;
-            transform: translateX(-50%) translateY(-50%);
-            z-index: 2;
-            top: 50%;
             border-radius: 999px;
         }
     }
