--- a/src/LifeCycle/Practice1/components/Control/Control.module.scss
+++ b/src/LifeCycle/Practice1/components/Control/Control.module.scss
@@ -3,7 +3,7 @@
 .player-container {
     width: 100%;
     display: flex;
-    font-size: 4rem;
+    font-size: 5rem;
     justify-content: space-between;
     padding: 0 30px;
     background-color: $bg-zing;
@@ -14,9 +14,33 @@
 
     .shuffle,
     .loop {
+        font-size: 2rem;
+
         color: $white;
         &.active {
             color: $primary;
+        }
+    }
+
+    .prev,
+    .next {
+        font-size: 3.2rem;
+    }
+    .loop {
+        position: relative;
+        .count {
+            right: -12px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 10px;
+            font-size: 1.5rem;
+            width: 20px;
+            height: 20px;
+            border-radius: 999px;
+            background-color: $primary;
+            color: $white;
         }
     }
 }
