--- a/src/LifeCycle/Practice1/components/Disc/Disc.module.scss
+++ b/src/LifeCycle/Practice1/components/Disc/Disc.module.scss
@@ -8,21 +8,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    border-radius: 15px;
-    background-color: $bg-zing;
     .disc {
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 999px;
         overflow: hidden;
-        margin-bottom: 20px;
         width: 250px;
         height: 250px;
         background-repeat: no-repeat;
         background-size: cover;
-
         .circle {
             background-color: $white-light;
             box-shadow: 0px 0px 50px 10px rgba($color: #000000, $alpha: 0.4);
@@ -31,7 +26,7 @@
             border-radius: 999px;
         }
     }
-    .cd.rotateCD {
+    .disc.rotation {
         -webkit-animation: rotating 30s linear infinite;
         -moz-animation: rotating 30s linear infinite;
         -ms-animation: rotating 30s linear infinite;
