--- a/src/LifeCycle/Practice1/components/RangeSlider/RangeSlider.module.scss
+++ b/src/LifeCycle/Practice1/components/RangeSlider/RangeSlider.module.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     color: $text-light;
     width: 100%;
-    padding: 0 20px;
+    padding-right: 10px;
     .played {
         margin-right: 16px;
     }
