--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,14 +1,8 @@
+@import '../../scss/';
+@import './Formik.scss';
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
-:root {
-    --primary: #61dbfb;
-    --inner-width-layout: 1150px;
-    --grey-light: rgba(22, 24, 35, 0.34);
-    --white: #fff;
-    --text-light: rgba(22, 24, 35, 0.5);
-    --text: #333;
-}
 * {
     margin: 0;
     padding: 0;
@@ -26,7 +20,6 @@ body {
 }
 
 a {
-    color: unset;
     text-decoration: none;
     &:hover {
         cursor: pointer;
@@ -35,7 +28,7 @@ a {
 
 button {
     border: none;
-
+    font-size: 1.6rem;
     &:hover {
         cursor: pointer;
     }
@@ -43,13 +36,4 @@ button {
 
 ul {
     list-style: none;
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
