done types formik vs yup and MUI

--- a/src/components/GlobalStyles/Formik.scss
+++ b/src/components/GlobalStyles/Formik.scss
@@ -17,3 +17,11 @@
 .MuiButton-root {
     font-size: 1.6rem !important;
 }
+
+.MuiFormLabel-root {
+    font-size: 1.6rem !important;
+}
+
+.MuiTypography-root {
+    font-size: 1.6rem !important;
+}
