--- a/src/pages/Formik/Practice2/Practice2.module.scss
+++ b/src/pages/Formik/Practice2/Practice2.module.scss
@@ -48,7 +48,7 @@
         }
     }
 
-    .input-item {
-        margin-bottom: 14px;
-    }
+    // .input-item {
+    //     margin-bottom: 14px;
+    // }
 }
