--- a/src/pages/Formik/Practice2/components/CheckBoxList/CheckBoxList.module.scss
+++ b/src/pages/Formik/Practice2/components/CheckBoxList/CheckBoxList.module.scss
@@ -1,8 +1,9 @@
-.checkbox-list-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    .list-item {
-        display: flex;
-    }
-}
+// .checkbox-list-container {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-start;
+//     margin-bottom: 10px;
+//     .list-item {
+//         display: flex;
+//     }
+// }
