--- a/src/pages/Formik/Practice2/components/RadioList/RadioList.module.scss
+++ b/src/pages/Formik/Practice2/components/RadioList/RadioList.module.scss
@@ -1,5 +1,5 @@
 @import '../../../../../scss/';
 
-.radio-list-container {
-    display: flex;
-}
+// .radio-list-container {
+//     display: flex;
+// }
