make weather app api and chart no api

--- a/src/pages/LifeCycle/Practice1/components/Control/Control.module.scss
+++ b/src/pages/LifeCycle/Practice1/components/Control/Control.module.scss
@@ -11,7 +11,8 @@
         background-color: $bg-zing;
         color: $white-light;
     }
-    .play {
+    .play,
+    .pause {
         font-size: 5rem;
     }
     .shuffle,
