--- a/src/pages/Formik/Practice1/Practice1.module.scss
+++ b/src/pages/Formik/Practice1/Practice1.module.scss
@@ -1,17 +1,15 @@
 @import '../../../scss/';
 .form1-container {
-    width: 400px;
+    margin: 0 auto;
+    width: 500px;
     border: 1px solid #f0f0f0;
     padding: 20px;
     border-radius: 20px;
-    box-shadow: 2px 2px 5px 2px rgba($color: #000000, $alpha: 0.2);
-    // button,
-    // label,
-    // input {
-    //     background-color: #e5f9f2;
-    //     font-size: 2rem;
-    //     color: $text;
-    // }
+    box-shadow: 2px 2px 2px 1px rgba($color: #000000, $alpha: 0.05);
+
+    @include mobile {
+        width: 100%;
+    }
     .btn-secondary,
     .btn-primary {
         background-color: #e5f9f2;
@@ -24,7 +22,7 @@
         border-radius: 10px;
 
         span {
-            margin-right: 40px;
+            margin-right: 70px;
         }
         &:hover {
             background-color: #e5f9f2;
@@ -42,6 +40,9 @@
 
     .input-container {
         margin-bottom: 10px;
+        input {
+            background-color: $white !important;
+        }
     }
 
     .password {
