--- a/src/pages/Formik/Practice3/components/Thumbnail/Thumbnail.module.scss
+++ b/src/pages/Formik/Practice3/components/Thumbnail/Thumbnail.module.scss
@@ -64,6 +64,9 @@
         border-radius: 10px;
         box-shadow: 2px 2px 3px 2px rgba($color: #000000, $alpha: 0.05);
         margin: 0 8px;
+        @include tablet {
+            margin-bottom: 16px;
+        }
     }
     .weather-right {
         flex: 1;
